--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta property="og:title" content="David Chechelashvili">
+    <meta property="og:description" content="David Chechelashvili (Software developer, Full stack web developer) portfolio">
+    <meta property="og:image" content="images/imagescreen.png">
+    <meta property="og:type" content="website">
 </head>
 
 <body>
