--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta property="og:title" content="David Chechelashvili">
     <meta property="og:description" content="David Chechelashvili (Software developer, Full stack web developer) portfolio">
-    <meta property="og:image" content="images/imagescreen.png">
+    <meta property="og:image" content="https://dcstudi0.github.io/images/imagescreen.png">
     <meta property="og:type" content="website">
 </head>
 
